--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -19,7 +19,7 @@
 
 <!-- Toastr JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-
+<!-- coment -->
 
 	</head>
 	<body class="d-flex flex-column h-100">
