Rename Wallet.html to wallet.html (fix case sensitivity)

--- a/src/main/resources/templates/user/walletTransaction.html
+++ b/src/main/resources/templates/user/walletTransaction.html
@@ -3,7 +3,7 @@
     xmlns:th="http://www.thymeleaf.org" 
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     layout:decorate="~{user/base}">
-
+<!-- demo -->
 <head>
     <title>Home</title>
     <link rel="stylesheet" th:href="@{/css/order.css}">
