--- a/src/main/resources/templates/user/profileBase.html
+++ b/src/main/resources/templates/user/profileBase.html
@@ -57,7 +57,7 @@
       </a>
   </li>
   <li>
-      <a href="/delete-account" class="nav-link text-danger" id="delete-account-link">
+      <a href="/user/delete-account-page" class="nav-link text-danger" id="delete-account-link">
           Delete Account
       </a>
   </li>
